# ai-agent-research

./: .gitignore  README.md  app.py  conversation_history.json  env  prompt_prototypes.txt
bubo/: .env  Dockerfile  README.Docker.md  README.md  compose.yaml  conversation_history.json  main.py  minervas_owl.py  pyproject.toml  requirements.txt
js-decompiler/: .python-version  main.py  pyproject.toml
talleyrand/: .gitignore  Dockerfile  compose.yaml  main.py  pyproject.toml  requirements.txt  talleyrand.py  talleyrand_conversation_history.json
writer-tool/: main.py  pyproject.toml
